# lec-fe

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  README.md  nodemon.json  package.json  pnpm-lock.yaml
.changeset/: config.json
apps/lec-studio/: electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
apps/lec-studio/native/: .gitignore  Cargo.toml  README.md  package.json
apps/lec-studio/native/src/: lib.rs
apps/lec-studio/src/main/: index.ts  lifeHook.ts
apps/lec-studio/src/main/loginWin/: index.ts
apps/lec-studio/src/main/mainWin/: index.ts
apps/lec-studio/src/preload/: index.d.ts  index.ts  types.ts
apps/lec-studio/src/renderer/src/: Root.tsx  main.tsx
apps/lech/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/lech/src/: App.tsx  Root.tsx  RouterContext.tsx  index.css  main.tsx  root.module.scss
apps/lech/src/assets/css/: index.css  root.css  root.scss
apps/lech/src/components/: index.ts
apps/lech/src/constants/: nav.ts  route.ts  time.ts  types.ts
apps/lech/src/mock/: feeds.ts  users.ts
apps/lech/src/pages/: NotFound.tsx
apps/lech/src/router/: router.tsx
apps/lech/src/routes/: router.tsx
apps/lech/src/store/: route.ts  user.ts
apps/lecstudio/: README.md  dev-app-update.yml  package.json
apps/lectech/: package.json
apps/leome/: .npmrc  README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
apps/leome/src/renderer/: index.html
(+110 files in other folders)
