[package]
name = "native"
version = "0.1.0"
description = "rust native packages for lec-studio"
authors = ["lec-fe"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
cocoa=  "0.24"